fix menu login broken ui

--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -163,6 +163,13 @@ h1 {
         opacity: 0.7;
     }
 }
+.menu-btn-flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 .menu-item {
     display: inline-block;
